--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         version:
           - '1.5'
-          - 'nightly'
         os:
           - ubuntu-latest
         arch:
@@ -54,9 +53,9 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: DocMeta, doctest
-            using AutoGis-Julia
-            DocMeta.setdocmeta!(AutoGis-Julia, :DocTestSetup, :(using AutoGis-Julia); recursive=true)
-            doctest(AutoGis-Julia)'
+            using AutoGIS
+            DocMeta.setdocmeta!(AutoGIS, :DocTestSetup, :(using AutoGIS); recursive=true)
+            doctest(AutoGIS)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
